# blade

./: Cargo.toml  README.md  bundler.toml
.cargo/: config.toml
.gitea/workflows/: build.yaml  build_plus.yaml
.gitea/workflows/publish/: publish.yaml  publish_plus.yaml
.github/workflows/: build.yaml  build_plus.yaml
src/: editor.rs  filter.rs  lib.rs  main.rs
