[package]
name = "blade"
version = "0.1.0"
edition = "2021"
authors = ["METALWINGS DSP <metalwings@draconium.productions>"]
license = "GPL-3.0-or-later"
homepage = "https://crouton.net"
description = "An innovative filter that works on everything"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "blade"
required-features = ["editor"]

[features]
plus = []
editor = []

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "simd", "standalone"] }
nih_plug_egui = {git = "https://github.com/robbert-vdh/nih-plug.git"}
egui_extras = {version = "0.26.2", features = ["all_loaders"]}
image = {version = "0.24.9", features = ["gif", "png"]}
stopwatch = "0.0.7"

[profile.release]
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
