[package]
name = "blade"
edition = "2021"
authors = ["cozy dsp <hi@cozydsp.space>"]
license = "GPL-3.0-or-later"
homepage = "https://cozydsp.space"
description = "An innovative filter that works on everything"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "blade"
required-features = ["editor"]

[features]
plus = []
editor = []

[dependencies]
cozy-util = { git = "https://github.com/cozy-dsp/cozy-util.git", version = "0.1.0" }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "simd", "standalone"] }
nih_plug_egui = {git = "https://github.com/robbert-vdh/nih-plug.git"}
egui_extras = {version = "0.26.2", features = ["image"]}
image = {version = "0.24.9", default-features = false, features = ["gif", "png"]}
libsw = "3.3.1"

[profile.release]
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[build-dependencies]
anyhow = "1.0.81"
vergen = { version = "8.3.1", features = ["git", "gitcl"] }
